platform/base/argocd-istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-gw
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - CHANGE_ME_HOST
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - CHANGE_ME_HOST
  gateways:
    - argocd-gw
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
